# ext-trp

./: .gitignore  Cargo.toml
.github/workflows/: build.yml  clippy.yml
bootstrap/: main.tf  variables.tf
bootstrap/configs/: cardano-mainnet.toml  cardano-preprod.toml  cardano-preview.toml  main.tf
bootstrap/crds/: main.tf
bootstrap/feature/: main.tf  operator.tf
bootstrap/instance/: sts.tf
bootstrap/proxy/: cert.tf  config.tf  deployment.tf  main.tf
bootstrap/service/: main.tf
operator/: Cargo.toml  README.md
operator/src/: config.rs  controller.rs  crdgen.rs  lib.rs  main.rs  metrics.rs  utils.rs
proxy/: Cargo.toml  README.md
proxy/src/: auth.rs  config.rs  main.rs  proxy.rs  tiers.rs
